--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -20,9 +20,9 @@ typing_extensions==4.13.1
 urllib3==2.3.0
 Werkzeug==3.1.3
 langchain==0.3.23
-langchain-openai==0.3.12
+langchain-google-genai==0.1.0
 langchain-community==0.3.21
-openai==1.70.0
+google-generativeai==0.5.2
 faiss-cpu==1.10.0
 pypdf==5.4.0
 tiktoken==0.9.0
@@ -31,3 +31,5 @@ pdfplumber==0.10.1
 pytesseract==0.3.10
 tesseract==0.1.3
 pdf2image==1.16.3
+langchain-huggingface
+sentence-transformers
